Finish index with one style.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>web Store</title>
+
+    <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/style1.css">
-    <title>e-Book Store</title>
 </head>
 
 <body>
+    <div id="container">
+        <div class="search bar">
+            <form>
+                <input type="text" placeholder="搜索你想要的书">
+                <button type="submit"></button>
+            </form>
+        </div>
+    </div>
+    <div id="container">
+        <ul>
+            <li><a class="active" href="#home">webStore</a></li>
+            <li><a href="#1">走近科学</a></li>
+            <li><a href="#2">历史人文</a></li>
+            <li><a href="#3">乡土文化</a></li>
+            <li><a href="#4">宗教书籍</a></li>
+            <li><a href="#5">英语学习</a></li>
+        </ul>
+    </div>
 
+    <div id="showoff">
+        <div>
+            <h1 class="title">网站推荐</h1>
+            <hr class="style-one">
+        </div>
+        <div class="row">
+            <div class="col"><a href="#"><img src="img/row1col1.jpg"></div>
+            <div class="col"><a href="#"><img src="img/row1col2.jpg"></div>
+            <div class="col"><a href="#"><img src="img/row1col3.jpg"></div>
+            <div class="col"><a href="#"><img src="img/row1col4.jpg"></a></div>
+        </div>
+    </div>
 
+    <div id="showoff">
+        <div>
+            <h1 class="title">人气热卖</h1>
+            <hr class="style-one">
+        </div>
+
+        <div class="row">
+            <div class="col"><a href="#"><img src="img/row2col1.jpg"></a></div>
+            <div class="col"><a href="#"><img src="img/row2col2.jpg"></a></div>
+            <div class="col"><a href="#"><img src="img/row2col3.jpg"></a></div>
+            <div class="col"><a href="#"><img src="img/row2col4.jpg"></a></div>
+        </div>
+    </div>
 </body>
 
 </html>
