--- a/brief.html
+++ b/brief.html
@@ -24,7 +24,7 @@
             </form>
         </div>
     </div>
-    <div id="container">
+    <div id="container" class="coltype">
         <ul>
             <li><a href="#home">webStore</a></li>
             <li><a href="#1">走近科学</a></li>
