--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </form>
         </div>
     </div>
-    <div id="container">
+    <div id="container" class="coltype">
         <ul>
             <li><a class="active" href="#home">webStore</a></li>
             <li><a href="#1">走近科学</a></li>
