--- a/info.html
+++ b/info.html
@@ -4,12 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>追风筝的人</title>
+
+    <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/style1.css">
-    <title>e-Book Info</title>
 </head>
 
 <body>
+
+    <div id="container">
+        <div class="search bar">
+            <form>
+                <input type="text" placeholder="搜索你想要的书">
+                <button type="submit"></button>
+            </form>
+        </div>
+    </div>
+    <div id="container" class="coltype">
+        <ul>
+            <li><a class="active" href="#home">webStore</a></li>
+            <li><a href="#1">走近科学</a></li>
+            <li><a href="#2">历史人文</a></li>
+            <li><a href="#3">乡土文化</a></li>
+            <li><a href="#4">宗教书籍</a></li>
+            <li><a href="#5">英语学习</a></li>
+        </ul>
+    </div>
+    <div id="showoff" class="info">
+        <div>
+            <h1 class="title">详细信息</h1>
+            <hr class="style-one">
+        </div>
+        <div class="photo"><a href="#"><img src="img/row1col1.jpg"></a></div>
+
+        <div class="intro">
+            <h1>追风筝的人</h1>
+            <div class="box" title="内容介绍">
+                <ol>
+                    本书为中英双语版，除中文版外，附有英文版，方便读者对照学习。“许多年过去了，人们说陈年旧事可以被埋葬，然而我终于明白这是错的，因为往事会自行爬上来。回首前尘，我意识到在过去二十六年里，自己始终在窥视着那荒芜的小径。”12岁的阿富汗富家少爷阿米尔与仆人哈桑情同手足。然而，在一场风筝比赛后，发生了一件悲惨不堪的事，阿米尔为自己的懦弱感到自责和痛苦，逼走了哈桑，不久，自己也跟随父亲逃往美国。成年后的阿米尔始终无法原谅自己当年对哈桑的背叛。为了赎罪，阿米尔再度踏上暌违二十多年的故乡，希望能为不幸的好友尽最后一点心力，却发现一个惊天谎言，儿时的噩梦再度重演，阿米尔该如何抉择？小说如此残忍而又美丽，作者以温暖细腻的笔法勾勒人性的本质与救赎，读来荡气回肠。
+                </ol>
+            </div>
+            <div class="box" title="作者简介">
+                <ol>
+                    卡勒德·胡赛尼（Khaled Hosseini），1965年生于阿富汗喀布尔市，后随父亲迁往美国。胡赛尼毕业于加州大学圣地亚哥医学系，现居加州。著有小说《追风筝的人》(The
+                    KiteRunner，2003）、《灿烂千阳》(A Thousand Splendid Suns，2007)、《群山回唱》（And the Mountains
+                    Echoed,2013）。作品全球销量超过4000万册。
+                    胡赛尼“立志拂去蒙在阿富汗普通民众面孔的尘灰，将背后灵魂的悸动展示给世人”。2006年，因其作品巨大的国际影响力，胡赛尼获得联合国人道主义奖，并受邀担任联合国难民署亲善大使。他还创立了以自己名字命名的基金会，为阿富汗的难民提供人道主义援助。
+                </ol>
+            </div>
+            <div class="box" title="售后服务">
+                <ol>
+                    凭发票，可享受全国联保服务，与您亲临商场选购的商品享受相同的质量保证。webStore还为您提供具有竞争力的商品价格和运费政策，请您放心购买！
+                    注：因厂家会在没有任何提前通知的情况下更改产品包装、产地或者一些附件，本司不能确保客户收到的货物与商城图片、产地、附件说明完全一致。只能确保为原厂正货！并且保证与当时市场上同样主流新品一致。若本商城没有及时更新，请大家谅解！
+                </ol>
+            </div>
+        </div>
+    </div>
+
+    <div id="showoff" class="info">
+        <div>
+            <a href="#">
+                <h2>下单</h2>
+            </a>
+        </div>
+    </div>
 
 </body>
 
